Import of SKI/App-DualLivedList-0.00_02 from CPAN.
gitpan-cpan-distribution: App-DualLivedList
gitpan-cpan-version:      0.00_02
gitpan-cpan-path:         SKI/App-DualLivedList-0.00_02.tar.gz
gitpan-cpan-author:       SKI
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-App::DualLivedList version 0.00_01
+App::DualLivedList version 0.00_02
 =================================
 
 INSTALLATION
@@ -14,9 +14,7 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-Module::Corelist
-Module::Version
-Module::InstalledVersion
+  CPAN
 
 COPYRIGHT AND LICENCE
 
