--- a/Changes
+++ b/Changes
@@ -15,3 +15,9 @@ Revision history for Perl extension App::DualLivedList.
 0.00_04 Mon August 9 23:49:10 2010
         -updated version; created by h2xs 1.23 with options
                -ABX -b 5.5.0 -n App::DualLivedList
+
+0.00_05  Fri Sep 10 01:16:20 2010
+	- original version; created by h2xs 1.23 with options
+		-ABX -b 5.5.0 -n App::DualLivedList
+
+
