--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-App::DualLivedList version 0.00_04
+App::DualLivedList version 0.00_05
 =================================
 
 INSTALLATION
@@ -15,8 +15,14 @@ DEPENDENCIES
 This module requires these other modules and libraries:
 
   CPAN
+  Memoize
   Module::CoreList
+  Test::Pod
+  Test::Pod::Coverage
   Term::ANSIColor::Print
+  Test::More
+  Test::Script
+  Test::Kwalitee
 
 COPYRIGHT AND LICENCE
 
