Import of SKI/App-DualLivedList-0.00_07 from CPAN.
gitpan-cpan-distribution: App-DualLivedList
gitpan-cpan-version:      0.00_07
gitpan-cpan-path:         SKI/App-DualLivedList-0.00_07.tar.gz
gitpan-cpan-author:       SKI
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -24,3 +24,8 @@ Revision history for Perl extension App::DualLivedList.
 	     - original version; created by h2xs 1.23 with options
 		         -ABX -b 5.5.0 -n App::DualLivedList
                                     -moved author tests to xt folder 
+
+0.00_07  Sun Sep 12 09:19:45 2010
+             -original version; created by h2xs 1.23 with options
+                         -ABX -b 5.5.0 -n App::DualLivedList
+                                    -fixed omissions
