--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Revision history for Perl extension App::DualLivedList.
 
-0.01  Mon Jun 11 05:19:09 2012
-	- original version; created by h2xs 1.23 with options
+0.02  Fri May 30 17:11:22 2014 
+   - original version; created by h2xs 1.23 with options
 		-ABX -b 5.5.0 -n App::DualLivedList
-                        -removed  module 'Shell' from list
+		   -current as of version 5.21.1
 
+0.01  Mon Jun 11 05:19:09 2012
+   - original version; created by h2xs 1.23 with options
+      -ABX -b 5.5.0 -n App::DualLivedList
