--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-App-DualLivedList version 0.01
+App-DualLivedList version 0.02
 =================================
 
 INSTALLATION
@@ -15,12 +15,13 @@ DEPENDENCIES
 This module requires these other modules and libraries:
 
     CPAN 
+    Getopt::Long
     Module::CoreList
     Term::ANSIColor::Print
 
-COPYRIGHT AND LICENCE
+COPYRIGHT AND LICENSE
 
-Copyright (C) 2010-2012 by Kevin W. Henwood
+Copyright (C) 2014 by Kevin W. Henwood
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.8 or,
